# calculator_hse

./: .clang-format  .gitignore  CMakeLists.txt
c_solution/: .clang-format  CMakeLists.txt  actions.c  actions.h  arrays.c  arrays.h  calculations.c  calculations.h  calculator_main.c  gui.c  gui.glade  input.txt  is_smh.c  is_smh.h  is_smh_compare.c  is_smh_compare.h  main.c  operations_functions.c  operations_functions.h  output.txt  parse.c  parse.h  polish.c  polish.h  polska.c  polska.h  variables.c  variables.h
c_solution/calcFnAndVar/: variables.c  variables.h
c_solution/gui/: gui.c  gui.glade
c_solution/utils/: foldersWorker.c  foldersWorker.h
js_solution/: gulpfile.js  package-lock.json  package.json  readme.md
js_solution/src/: main.js
js_solution/tests/: input.txt
src/: actions.c  arrays.c  arrays.h  calculations.c  calculations.h  gui.c  is_smh_compare.c  is_smh_compare.h  polish.c  polish.h
src/calcFnAndVar/: operations_functions.c  variables.c  variables.h
task/: en.txt  ru.txt  test.txt
view/: gui.c
